--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.68.3",
     "@react-three/fiber": "^8.13.0",
-    "@react-three/postprocessing": "^2.11.4",
+    "@react-three/postprocessing": "file:^2.11.3npm install @react-three/postprocessing@^2.11.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
